kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-crud-app
  namespace: crud-app
spec:
  replicas: 5
  selector:
    matchLabels:
      app: go-crud-app
  template:
    metadata:
      labels:
        app: go-crud-app
    spec:
      containers:
      - name: go-crud-app
        image: nikolajankovikj/go-crud-app:latest
        ports:
        - containerPort: 8080
