kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: crud-app
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: postgres

---

apiVersion: v1
kind: Service
metadata:
  name: go-crud-app
  namespace: crud-app
spec:
  type: LoadBalancer
  ports:
    - port: 8081
      targetPort: 8080
  selector:
    app: go-crud-app
