kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-crud-app-ingress
  namespace: crud-app
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: go-crud-app
      http:
        paths:
          - path: /books
            pathType: Prefix
            backend:
              service:
                name: go-crud-app
                port:
                  number: 8081
          - path: /books/{id}
            pathType: Prefix
            backend:
              service:
                name: go-crud-app
                port:
                  number: 8081
